--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(sp_exam_project)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(sp_exam_project main.cpp)
+#include_directories(include)
+add_subdirectory(include)
+add_subdirectory(source)
+
+add_executable(sp_exam_project source/main.cpp)
+
+target_link_libraries(sp_exam_project PRIVATE stochastic-simulation)
