--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,11 @@ cmake_minimum_required(VERSION 3.30)
 project(sp_exam_project)
 
 set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(lib/include)
+# Tilføj biblioteket
 add_subdirectory(lib/src)
-add_subdirectory(lib/examples)
 
-add_executable(sp_exam_project bin/src/main.cpp
-        lib/include/vessels.hpp)
-
-target_link_libraries(sp_exam_project PRIVATE stochastic-simulation)
+# Tilføj executable
+add_subdirectory(bin/src)
