--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(stochastic-simulation STATIC
         ../examples/circadian_rythm.cpp
         ../examples/covid-19.cpp
         ../examples/exponential_decay.cpp
+        ../../test/SymbolTableTests.cpp
+        ../src/trajectory_chart_widget.cpp
 )
 
 # Sørg for at dit include virker
@@ -18,5 +20,13 @@ target_include_directories(stochastic-simulation
         ${CMAKE_CURRENT_SOURCE_DIR}/../examples
 )
 
+find_package(Qt6 COMPONENTS Core Gui Widgets Charts REQUIRED)
+
+target_link_libraries(stochastic-simulation
+        PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Charts
+)
+
+
+#find_package(doctest )
 
 
