Changes by thoma

--- a/bin/src/CMakeLists.txt
+++ b/bin/src/CMakeLists.txt
@@ -9,6 +9,8 @@ target_include_directories(sp_exam_project
         ${CMAKE_SOURCE_DIR}/lib/examples
 )
 
+find_package(Qt6 COMPONENTS Core Gui Widgets Charts REQUIRED)
+
 target_link_libraries(sp_exam_project
         PRIVATE
         stochastic-simulation
@@ -16,4 +18,8 @@ target_link_libraries(sp_exam_project
         Qt6::Gui
         Qt6::Widgets
         Qt6::Charts
+)
+
+target_link_libraries(stochastic-simulation
+        PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Charts
 )
