--- a/bin/src/CMakeLists.txt
+++ b/bin/src/CMakeLists.txt
@@ -23,3 +23,5 @@ target_link_libraries(sp_exam_project
 target_link_libraries(stochastic-simulation
         PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Charts
 )
+
+target_compile_features(sp_exam_project PRIVATE cxx_std_20)
