--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -2,9 +2,9 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.30)
 
-find_package(benchmark REQUIRED)
+# find_package(benchmark REQUIRED)
 add_executable(benchmarks benchmarks.cpp)
 target_link_libraries(benchmarks PRIVATE
         benchmark::benchmark
