--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(stochastic-simulation STATIC
         ../src/trajectory_chart_widget.cpp
         ../include/trajectory_chart_widget.hpp
         ../include/charter.hpp
+        charter.cpp
         ../include/multithreading.hpp
         ../examples/mutli_threading.cpp
         ../include/generator.h # This is required for QT6 for some reason
