--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -9,13 +9,14 @@ add_library(stochastic-simulation STATIC
         observer.cpp
         random.cpp
         agent.cpp
+        charter.cpp
+        ../examples/multi_threading.cpp
         ../examples/circadian_rythm.cpp
         ../examples/covid-19.cpp
         ../examples/exponential_decay.cpp
         ../src/trajectory_chart_widget.cpp
         ../include/trajectory_chart_widget.hpp
         ../include/charter.hpp
-        charter.cpp
         ../include/multithreading.hpp
         ../include/generator.h # This is required for QT6 for some reason
 )
