--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -18,7 +18,8 @@ add_library(stochastic-simulation STATIC
         ../include/trajectory_chart_widget.hpp
         ../include/charter.hpp
         ../include/multithreading.hpp
-        ../include/generator.h # This is required for QT6 for some reason
+        ../include/generator.h
+        ../include/debug_print.hpp # This is required for QT6 for some reason
 )
 
 # Sørg for at dit include virker
