Fixed compile errors

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(stochastic-simulation STATIC
         ../include/multithreading.hpp
         ../include/debug_print.hpp
         ../../bin/src/utils.hpp
+        ../examples/circadian_rhythm.hpp
 )
 
 
